<resources>
    <string name="app_name">Coffe Shop</string>
    <string name="description">A cappuccino is an approximately 150 ml (5 oz) beverage, with 25 ml of espresso coffee and 85ml of fresh milk the fo.. Read More</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="user_account">User Account</string>
    <string name="cart">Cart</string>
    <string name="price">Price</string>
    <string name="_84_53">$84.53</string>
    <string name="password_changed">Password changed</string>
    <string name="your_password_has_been_changed_succesfully">Your password has been changed succesfully</string>
    <string name="back_to_login">Back to login</string>
    <string name="detail">Detail</string>
    <string name="size">Size</string>
    <string name="_4_53">$4.53</string>
    <string name="find_the_best_xa_coffee_to_your_taste">Find the best\nCoffee to your taste</string>
    <string name="coffee_so_good_your_taste_buds_will_love_it">Coffee so good, your taste buds will love it.</string>
    <string name="thank_you">Thank You</string>
    <string name="take_a_coffee">Take a Coffee</string>
    <string name="our_coffee_specials_let_you_order_a_coffee_just_the_way_you_like_it">Our coffee specials let you order a coffee just the way you like it.</string>
    <string name="book_a_seat">Book a Seat</string>
    <string name="book_a_seat_in_your_favourite_sitting_position_and_maximize_your_productive_time">Book a Seat in your favourite sitting position. And Maximize your productive time.</string>
    <string name="enjoy_your_time">Enjoy Your Time</string>
    <string name="our_calm_and_convenient_environment_lets_you_have_fun_and_be_productive">Our calm and Convenient environment lets you have fun and be productive.</string>
    <string name="order_history">Order History</string>
    <string name="payment">Payment</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="reset_password">Reset password</string>
    <string name="please_type_something_you_ll_remember">Please type something you’ll remember</string>
    <string name="new_password">New Password</string>
    <string name="must_be_8_characters">must be 8 characters</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="repeat_password">repeat password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="i_don_t_have_an_account">I don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_0111_111_111">0111 111 111</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>