<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:text="Sign In"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:hint="@string/abc_gmail_com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="********"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFogotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#FFFFFF"
            android:insetLeft="180dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="#958C8C"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#F07A0C"
            android:text="Sign In"
            android:textSize="18sp"
            app:cornerRadius="9dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/i_don_t_have_an_account"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnSignUpNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textColor="#958C8C"
                android:textColorHighlight="#000000"
                android:textColorLink="#000000" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>