<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:hint="Full Name"
            android:padding="10dp"
            android:textSize="16sp"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phone_number"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:hint="@string/_0111_111_111"
            android:padding="10dp"
            android:textSize="16sp"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:hint="abc@gmail.com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="must be 8 characters"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/confirm_password"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:background="#E6E5E5"
            android:backgroundTint="#E6E4E4"
            android:hint="repeat password"
            android:padding="10dp"
            android:textSize="16sp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#F07A0C"
            android:text="Sign Up"
            android:textSize="18sp"
            app:cornerRadius="9dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="Already have an account?"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnSignUpNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:padding="10dp"
                android:text="Sign In "
                android:textColor="#958C8C"
                android:textColorHighlight="#000000"
                android:textColorLink="#000000" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>